--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "@types/html-pdf": "^3.0.0",
     "@types/jsonwebtoken": "^8.3.4",
     "@types/jsreport": "^2.9.1",
+    "@types/jsreport-chrome-pdf": "^1.6.3",
     "@types/multer": "^1.4.7",
     "@types/mysql": "^2.15.19",
     "@types/node": "^12.7.8",
     "@types/nodemailer": "^6.4.4",
     "@types/utf8": "^3.0.1",
-    "@types/jsreport-chrome-pdf": "^1.6.3",
     "concurrently": "^6.2.1"
   },
   "dependencies": {
@@ -57,6 +57,7 @@
     "swagger-ui-express": "^4.1.6",
     "tinify": "^1.6.1",
     "ts-afip-ws": "^1.2.6",
-    "utf8": "^3.0.0"
+    "utf8": "^3.0.0",
+    "xlsx": "^0.18.5"
   }
 }
